--- a/.github/workflows/CriarText.yml
+++ b/.github/workflows/CriarText.yml
@@ -1,4 +1,4 @@
-name: Criar arquivo com informações do push 
+name: Criar arquivo com informações do push
 
 on:
   push:
@@ -15,15 +15,18 @@ jobs:
       - name: Checkout do repositório
         uses: actions/checkout@v4
 
-      # Gera/atualiza um relatório com dados úteis do push
+      # Gera/atualiza o arquivo com dados do push (CRIA de fato o arquivo)
       - name: Criar arquivo com informações
         run: |
+          {
             echo "👋 Push por: ${{ github.actor }}"
             echo "📅 Data (UTC): $(date -u '+%Y-%m-%d %H:%M:%S UTC')"
             echo "🌿 Branch: ${{ github.ref_name }}"
-            cat readme.txt
+          } > readme.txt
+          echo "------ readme.txt ------"
+          cat readme.txt
 
-      # Commita e envia as mudanças
+      # Commit e push (evita loop e falha sem mudanças)
       - name: Commitar e enviar o arquivo
         if: ${{ github.actor != 'github-actions[bot]' }}
         run: |
@@ -31,5 +34,5 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
           git add readme.txt
-          git commit -m "Arquivo automático com dados"
-          git push
+          git commit -m "chore(ci): atualizar readme.txt [skip ci]" || echo "Sem mudanças para commitar"
+          git push || echo "Nada para enviar"
