resolvendo o erro do criarText nesse arquivo
Refactor script to write information to readme.txt in a single block.

--- a/.github/workflows/ArquivoSequencia.yml
+++ b/.github/workflows/ArquivoSequencia.yml
@@ -59,12 +59,12 @@ jobs:
 
       - name: Criar arquivo com informações
         run: |
-          echo "👋 Push por: ${{ github.actor }}"
-          echo "📅 Data (UTC): $(date -u '+%Y-%m-%d %H:%M:%S UTC')"
-          echo "🌿 Branch: ${{ github.ref_name }}"
-          if [ ! -f readme.txt ]; then
-            touch readme.txt
-          fi
+         {
+            echo "👋 Push por: ${{ github.actor }}"
+            echo "📅 Data (UTC): $(date -u '+%Y-%m-%d %H:%M:%S UTC')"
+            echo "🌿 Branch: ${{ github.ref_name }}"
+          } > readme.txt
+          echo "------ readme.txt ------"
           cat readme.txt
           
       - name: Commitar e enviar o arquivo
